[metadata]
name = hayes
version = 0.0.5.post+gitver
description = Hayes -- Simpler Elasticsearch for Django
long_description = file: README.rst
keywords = elastictsearch, django
url = https://github.com/andersinno/hayes/
maintainer = Anders Innovations
maintainer_email = support@anders.fi
license = MIT
license_file = LICENSE
platforms = any

[options]
include_package_data = True
packages = find:
install_requires =
    pyes
    requests>=1.0
    six>=1.9.0,<2.0
zip_safe = False

[options.packages.find]
exclude = tests, tests.*, hayes_demo, hayes_demo.*

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,.git,.eggs,dist,venv,migrations

[isort]
multi_line_output=4
skip=.tox,dist,venv
not_skip=__init__.py
known_first_party=hayes
known_third_party=django,faker,requests,pytest,six
